<android.gesture.GestureOverlayView 
						xmlns:android="http://schemas.android.com/apk/res/android"
						android:layout_width="fill_parent"
  					android:layout_height="fill_parent"
  					android:id="@+id/gestures"
  					android:eventsInterceptionEnabled="true"
  					android:orientation="vertical">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	                android:layout_width="fill_parent" 
	                android:layout_height="wrap_content"
	                android:padding="10px" >
	
	    <TextView android:id="@+id/title_label" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/title_label" />
	
	    <EditText android:id="@+id/title" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/title_label"
	              android:gravity="top" />
	              
	    <TextView android:id="@+id/date"
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:layout_below="@id/title" />
	
	    <TextView android:id="@+id/text_label" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/message_label" 
	              android:layout_below="@id/date" />
	
	    <EditText android:id="@+id/text" 
	              android:layout_width="fill_parent" 
	              android:layout_height="200dp" 
	              android:background="@android:drawable/editbox_background"
	              android:gravity="top"
	              android:layout_below="@id/text_label" />
	           
	    <Button android:id="@+id/ok" 
	            android:layout_width="100dp" 
	            android:layout_height="40dp" 
	            android:layout_alignTop="@id/cancel"
	            android:text="@string/save" />
	          	
	    <Button android:id="@+id/cancel"
	            android:layout_width="100dp" 
	            android:layout_height="40dp" 
	            android:layout_below="@id/text"
	            android:layout_toRightOf="@id/ok"
	            android:layout_marginLeft="10px"
	            android:text="@string/cancel" />
	            
	</RelativeLayout>
</android.gesture.GestureOverlayView>